style.css
@font-face {
	font-family: "Raleway";
	src: url("Raleway/Raleway-Regular.ttf");
}


body{
	font-family: "Raleway";
	font-size: 25px;
	margin: 0;
}

img {
  max-width: 100%;
  box-sizing: border-box;

}
li {
	list-style-type: none;
	text-align: right;
}
a{
	text-decoration: none;
}

p{
	margin: 0;
}

header nav {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
}

header nav p {
  width: 50%;
}

header nav p:nth-child(2),
header nav p:nth-child(3) {
  order: 1;
  text-align: center;
  padding-bottom: 1em;
  border-bottom: 5px solid #F2F2F2;
  font-size: 40px;
}

header nav p img {
  width: 60%;
  padding-left: 2em;
}

header nav p.selected {
  border-bottom: 5px solid #0065FC;
}

header nav p.selected a {
  color: #0065FC;
}

header nav p.subscription a{
	display: flex;
   justify-content: flex-end;
   margin-right: 1em;
   font-size: 40px;
   color: #0065FC;
   font-weight: bold;
}

.active {
border-bottom: 4px solid #0065FC;
color: #0065FC;
}

.Recherche{
	width: 90%;
	margin: 0 auto;
}


h1{
	font-size: 40px;
}

#centreville{
font-size: 14px;
}

.Formu{
	display: flex;
	justify-content: center;
	border: #F2F2F2 solid 3px;
  border-radius: 25px;
}

.search{
	padding: 5px 6px;
  background-color: #F2F2F2;
  border-radius: 25px 0px 0px 25px;
  width: 100px;
  height: 100px;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-grow: 0;
}

.fa-map-marker-alt{
	font-size: 40px;
}
.searchinput{
	font-weight: bolder;
	font-size: 40px;
	border: none;
	flex-grow: 4;
}

.loupe{
	background-color: #0065FC;
  border-radius: 25px;
  border: none;
  color: white;
  padding: 10px;
  width: 110px;
  height: 110px;
  font-size: 40px;

}

.loupe2{
	display: none;
}

.titrefiltre{
	font-size: 15px;
}
.Filter{
	display: flex;
	flex-wrap: wrap;
}
.containerfilter{
	display: flex;
	font-weight: bold;
	border: #F2F2F2 solid 4px;
	border-radius: 67px;
	margin: 15px 60px 15px 0px;
}

.buttonfilter{
	background-color:#DEEBFF ;
	color: #0065FC;
	border-radius: 50px;
	padding: 10px;
	width: 100px;
	height: 100px;
	font-size: 40px;
	display: flex;
	justify-content:center;
	align-items: center;
	border: 1px solid #DEEBFF;
}

.textfilter{
	padding: 7px;
	font-size: 30px;
	display: flex;
	align-items: center;
	margin: 20px;
}
.Family{
display: flex;
	font-weight: bold;
	border: #F2F2F2 solid 4px;
	border-radius: 67px;
}

.Child{
background-color:#DEEBFF ;
	color: #0065FC;
	border-radius: 50px;
	padding: 10px;
	width: 100px;
	height: 100px;
	font-size: 40px;
	display: flex;
	justify-content:center;
	align-items: center;
}

.Fam{
padding: 7px;
	font-size: 30px;
	display: flex;
	align-items: center
}

.Romance{
	display: flex;
	font-weight: bold;
	border: #F2F2F2 solid 4px;
	border-radius: 67px
}

.Heart{
background-color:#DEEBFF ;
	color: #0065FC;
	border-radius: 50px;
	padding: 10px;
	width: 100px;
	height: 100px;
	font-size: 40px;
	display: flex;
	justify-content:center;
	align-items: center;
}

.Love{
padding: 7px;
	font-size: 30px;
	display: flex;
	align-items: center
}
.Pet{
display: flex;
	font-weight: bold;
	border: #F2F2F2 solid 4px;
	border-radius: 67px
}

.Dog{
	background-color:#DEEBFF ;
	color: #0065FC;
	border-radius: 50px;
	padding: 10px;
	width: 100px;
	height: 100px;
	font-size: 40px;
	display: flex;
	justify-content:center;
	align-items: center;
}

.Cat{
	padding: 7px;
	font-size: 30px;
	display: flex;
	align-items: center;
}
.Info{
	display: flex ;
	align-items: center;

}

.I{;
	color: #0065FC;
	background-color: white;
	width: 50px;
	height: 50px;
	border-radius: 50%;
	margin-right: 15px;
	font-size: 25px;
}

.alignee{
	display: flex;
	align-items: center;
	justify-content: space-between;
}

.h3{
	font-weight: bolder;
}
.populaire{
	background-color: #F2F2F2;
	padding: 20px;
}

.article1{
	display: flex;
    background-color: white;
    width: 95%;
    margin: 20px auto;
    border-radius: 30px;
}

.dossier1{
	display: flex;
	padding: 30px;
}

.image1{
	display: flex;
	width: 33vw;
	height: 33vw;
	object-fit: cover;
	border-top-left-radius: 20px;
	border-bottom-left-radius: 20px;
}

.texte1{
	display: flex;
	color: black;
	margin-left: 35px;
	flex-direction: column;

}

.texte1 h3{
	margin-top: 0px;
	font-size: 42px;
}

.texte1 p{
	font-size: 30px;
	margin-top: 0px;
}

.texte1 .stars{
	margin-top: 90px;
}

.fa-star{
	color: #F2F2F2;
}
.stared{
	color:#0065FC;
}

.Hebergement{
	padding: 20px;
}

.article2{
	display: flex;
    background-color: white;
    width: 95%;
    margin: 20px auto;
    border-radius: 30px;
    box-shadow: 0px 0px 39px 10px rgba(84,84,84,0.58);
 }

 .dossier2{
	display: flex;
	flex-direction: column;
	padding: 15px;
}

.image2{
	display: flex;
	height: 28vw;
	width: 87vw;
	object-fit: cover;
	border-top-left-radius: 20px;
	border-top-right-radius: 20px;
}

.texte2{
	display: table-column;
	color: black;
	}

.texte2 h3{
	font-size: 35px;
	margin-top: 20px;
	margin-bottom: 0px ;
}

.texte2 p{
	margin-top: 10px;
	font-size: 30px;
	margin-bottom: 0px;
}



.affiche{
	color: black;
	padding-bottom: 30px;
	padding-left: 50px;
}
#Activites{
	padding: 20px;
}

h2{
	padding-left: 30px;
}

.article3{
	display: flex;
    background-color: white;
    width: 95%;
    margin: 0 auto 40px;
    border-radius: 30px;
    flex-direction: column;
    box-shadow: 0px 0px 39px 10px rgba(84,84,84,0.58);
 }
.dossier3{
	display: flex;
flex-direction: column;
flex-wrap: wrap;
}

.image3{
	display: flex;
	object-fit: cover;
	border-top-right-radius: 30px;
	border-top-left-radius: 30px;
	width: 90vw;
	height: 31vw;
}

.texte3{
	display: flex;
	color: black;
	padding-left: 35px;
	font-size: 35px;
	}
.foot{
	background-color: #F2F2F2;
	font-size: 15px;
	padding-left: 50px;
}
.article4{
	padding-top: 20px;
	padding-bottom: 20px;
}

.foot1{
	text-decoration: none;
	color: black;
}

@media screen and (min-width: 768px){
	#centreville{
		font-size: 30px;
	}

	.titrefiltre{
		font-size: 40px;
	}

	.affiche{
		font-size: 30px;
	}

	.foot{
		font-size: 22px;
	}
}

@media screen and (min-width: 1024px){

	body{
		font-size: 15px;
	}

	header nav{
		flex-wrap: nowrap;
		align-items: initial;
	}

	header nav p{
		padding-top: 8px;
		border-top: 5px solid transparent;
	}

	header nav p img{
		width: 35%;
	}

	header nav p:first-child{
		margin-right: 96px;
	}

	header nav p:nth-child(2),
	header nav p:nth-child(3),
	header nav p:nth-child(4){
		display: flex;
		justify-content: flex-end;
		font-size: 15px;
		justify-content: center;
		align-items: center;
		width: 14%;
		border-bottom: 0;
		padding-bottom: 0;
	}

	header nav p.selected {
  	border-top: 5px solid #0065FC;
	}

	header nav p.subscription a{
		margin-right: 2em;
		font-size: 15px;
	}
	header nav p.subscription{
		order: 2;
	}

	h1{
		font-size: 18px;
	}

	h1 br{
		display: none;
	}

	#centreville{
		font-size: 15px;
	}

	.Formu{
		width: 46%;
		border: #F2F2F2 solid 1px;
	}

	.search{
		padding: 0 6px;
		width: 70px;
		height: 70px;
	}

	.fa-map-marker-alt{
		font-size:20px;
	}


	.searchinput{
		font-size: 15px;
		height: 70px;
		width: 86%;
	}

	.loupe{
		display: none;
	}

	.loupe2{
		display: block;
		font-size: 15px;
		background-color: #0065FC;
  	border-radius:0 25px 25px 0;
  	border: none;
  	color: white;
  	padding: 10px;
  	width: 110px;
  	height: 70px;
	}

	.fa-search{
		display: none;
	}

	.Filtre{
		display: flex;
		width: 100%;
		font-size: 15px;
	}

	.titrefiltre{
		margin-right: 40px;
		font-size: 20px;
	}

	.Filter{
		flex-wrap: nowrap;
	}

	.containerfilter{
		border: #F2F2F2 solid 2px;
	}
	.buttonfilter{
		width: 50px;
		height: 50px;
		border: 0px solid white;
	}

	.textfilter{
		margin: 0;
		font-size: 11px;
	}

	.fa-money-bill-wave{
		font-size: 13px;
	}

	.fa-child{
		font-size: 13px;
	}

	.fa-heart{
		font-size: 13px;
	}

	.fa-dog{
		font-size: 13px;
	}

	.Info{
		margin-bottom: 24px;
		margin-top: 7px;
	}

	.I{
		font-size: 10px;
		height: 20px;
		width: 20px;
	}

	.Info p{
		font-size: 12px;
	}

	#hebergement{
		display: flex;
		flex-wrap: wrap;
		width: 100%;
		justify-content: space-around;
	}

	.populaire{
		width: 30%;
		order: 2;
		border-radius: 25px;
		padding: 0;
	}

	.article1{
		box-shadow: 1px 0px 10px 3px rgb(84 84 84 / 25%);
	}

	.dossier1{
		padding: 10px;
	}

	.image1{
		width: 11vw;
		height: 11vw;
	}

	.texte1{
		font-size: 15px;
		margin-left: 17px;
	}

	.texte1 h3{
		font-size: 16px;
		margin-bottom: 3px;
	}

	.texte1 p{
		font-size: 12px;
	}

	.texte1 .stars{
		margin-top: 30px;
	}

	.Hebergement{
		order: 1;
		background-color: #F2F2F2;
		width: 60%;
		display: flex;
		flex-wrap: wrap;
		border-radius: 25px;
		padding: 0;
	}

	.Hebergement h2{
		font-size: 22px;
		margin-top: 10px;
		margin-bottom: 0;
		width: 100%;
	}

	.article2{
		width: 30%;
		height: 29%;
		box-shadow: 1px 0px 10px 3px rgb(84 84 84 / 25%);
	}

	.dossier2{
		padding: 5px;
	}

	.image2{
		height: 6vw;
		width: 17vw;
		border-top-left-radius: 24px;
		border-top-right-radius: 24px;
	}

	.texte2{
		font-size: 15px;
	}

	.texte2 h3{
		font-size: 15px;
		margin: 0;
	}

	.texte2 p{
		margin-top: 3px;
		margin-bottom: 0;
		font-size: 15px;
	}

	.texte2 .stars{
		margin-top: 12px;
	}

	.affiche{
		font-size: 18px;
		padding-bottom: 0;
		padding-left: 30px;
	}

	#activite{
		margin-bottom: 50px;
	}
	.activity{
		display: grid;
		grid-template-columns: repeat(4, 22%);
		grid-template-rows: repeat(3, 107px);	
		grid-gap: 30px;
		padding: 0 15px;
	}

	.texte3{
		font-size: 12px;
	}

	.article3{
		box-shadow: 0px 0px 13px 0px rgb(84 84 84 / 58%);
	}
	.activity .article3:nth-child(1){
		grid-column-start: 1;
		grid-column-end: 1;
		grid-row-start: 1;
		grid-row-end: 4;
		height: 380px;
	}

	.activity .article3:nth-child(2){
		grid-column-start: 2;
		grid-column-end: 2;
		grid-row-start: 1;
		grid-row-end: 2;
		height: 244px;
	}
	.activity .article3:nth-child(3){
		grid-column-start: 2;
		grid-column-end: 2;
		grid-row-start: 3;
		grid-row-end: 4;
		height: 107px;
	}

	.activity .article3:nth-child(4){
		grid-column-start: 3;
		grid-column-end: 3;
		grid-row-start: 1;
		grid-row-end: 4;
		height: 380px;
	}

	.activity .article3:nth-child(5){
		grid-column-start: 4;
		grid-column-end: 4;
		grid-row-start: 1;
		grid-row-end: 2;
		height: 107px;
	}

	.activity .article3:nth-child(6){
		grid-column-start: 4;
		grid-column-end: 4;
		grid-row-start: 2;
		grid-row-end: 3;
		height: 244px;
	}

	.activity .article3:nth-child(1) .image3{
		height: 32vw;
	}

	.activity .article3:nth-child(2) .image3{
		height: 18vw;
		width: 25vw;
	}

	.activity .article3:nth-child(3) .image3{
		height: 6vw;
		width: 25vw;
	}

	.activity .article3:nth-child(4) .image3{
		height: 32vw;
	}

	.activity .article3:nth-child(5) .image3{
		height: 7vw;
		object-position: top;
	}

	.activity .article3:nth-child(6) .image3{
		height: 19vw;
	}

	.foot{
		display: flex;
		justify-content: space-around;
		padding-left: 0;
	}

	.foot1 p{
		padding-bottom: 20px;
	}

}

